syntax = "proto3";
package pb;

option go_package = "github.com/hosseintrz/torob/rest/pb";

message SignupRequest{
  string email = 1;
  string username = 2;
  string password = 3;
  string fullname = 4;
  enum Role{
    UNKNOWN = 0;
    NORMAL = 1;
    ADMIN = 2;
    OWNER = 3;
  }
  Role role = 5;
}

message LoginRequest{
  string username = 1;
  string password = 2;
}

message AuthResponse {
  string token = 1;
}

message ValidationRequest{
  string token = 1;
}
message ValidationResponse{
  string id = 1;
  string email = 2;
  string username = 3;
  string password = 4;
  string fullname = 5;
  enum Role{
    UNKNOWN = 0;
    NORMAL = 1;
    ADMIN = 2;
    OWNER = 3;
  }
  Role role = 6;
}

service auth{
  rpc Signup(SignupRequest) returns (AuthResponse){}
  rpc Login(LoginRequest) returns (AuthResponse){}
  rpc ValidateToken(ValidationRequest) returns (ValidationResponse){}
}


